--- a/starter/css/style.css
+++ b/starter/css/style.css
@@ -67,24 +67,21 @@ header a {
   margin-bottom: 10px;
   padding: 20px;
   background-image: url(../images/02-hero-bg.jpg);
-  color: red;
+  color: yellowgreen;
   background-size: cover;
   background-position: center;
   height: 300px;
   font-size: 40px;
-  
 
 }
+/* subtitle code ends here */
 
-/* subtitle code end */
-
-/* Side bar code start */
+/* Work section done with tutor's help */
 
 main section {
   display: flex;
   flex-wrap: wrap;
   padding: 0 5px;
-  background-color: aqua;
   align-items: center;
 }
 main section+section {
@@ -95,18 +92,20 @@ section h2 {
   flex: 0 0 10ch;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: 50px;
+  color: black ;
  
 }
 section div {
   flex: 1 1 0;
-  background-color: red;
+  background-color: #ffffff;
 }
 
 section#work div{
-  background-color: green;
+  background-color:#ffffff;
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
+  
 }
 
 section article {
@@ -118,15 +117,39 @@ section article {
 
 section article:first-child {
   flex-basis: 100%;
-  
 }
-/* Side bar code end */
+/* Work section done with tutor's help */
 
-/* Grid area code */
+h3{
+  color: #ffffff;
+  display: flex;
+}
+#horiseon-marketing-job {
+  background-image: url(../images/horiseon.png);
+  background-size: cover;
+}
+#github {
+  background-image:url(../images/Github.png);
+  background-size: cover;
+}
+#ledwall {
+  background-image: url(../images/ledwall.jpg);
+  background-size: cover;
+}
+#calculator {
+  background-image: url(../images/calculator.jpg);
+  background-size: cover;
+}
+#run-buddy {
+  background-image: url(../images/02-run-buddy.jpg);
+  background-size: cover;
+}
 
-
-
-
-
-/* footer code */ 
-
+.contact2 {
+  display:flex;
+  padding:10px;
+  background-color: blueviolet;
+}
+#contact {
+flex-direction: row;
+}
