--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ section h2 {
   flex: 0 0 10ch;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: 50px;
-  color: black ;
+  color: cadetblue;
  
 }
 section div {
@@ -122,6 +122,7 @@ h3{
   color: #ffffff;
   display: flex;
 }
+
 #horiseon-marketing-job {
   background-image: url(../gp-portofolio/images/horiseon.png);
   background-size: cover;
@@ -148,3 +149,4 @@ section#contact div {
   display: flex;
   justify-content: space-evenly;
 }
+
